From version 0.3.10 to 0.3.11
- fix for garbage collection issue in registration re-use.
- introduction of uuid's for call records.
- new thread managed cdr system, will be needed for radius.
- service statistical periods propogated to plugins.
- ability to push error logging into plugins.

From version 0.3.9 to 0.3.10
- subscriber plugin provider registration management.
- minor update for GNU conventions.
- moved more stack configuration into base object.
- revised periodic stats processing and logging.
- server control "swig" support, starting with python and php5.

From version 0.3.8 to 0.3.9
- man page for daemon admin support shell utility.
- sipwitch can return server info to calling pid.
- disconnect in trying is a declined call, not failed one.
- GNU Telephony MIB introduced for future snmp plugin.
- basic sipwitch call statistics added.

From version 0.3.7 to 0.3.8
- cleanup in module loading and path computations.
- fix for mingw32 cross builds, mingw32 now requires ucommon >= 2.0.2
- External registry objects for (provider) plugins that create call legs.
- routeLocal() for provider plugins to return remapped call leg registries.
- sipwitch server control options externalized into new "sipwitch" binary.

From version 0.3.6 to 0.3.7
- more registration management support functionality in forward module.
- start of authentication support for authorized destinations in sipwitch core.

From version 0.3.5 to 0.3.6
- expanded userid to accept remote user id's that are encoded uuid's.
- correctly refresh registration contact info if userid changes.

From version 0.3.4 to 0.3.5
- small fixes for memset in forward and messages
- pedantic code cleanup

From version 0.3.3 to 0.3.4
- new common uri code for libsipwitch to better support plugin development.
- refer rerouting support in plugins

From version 0.3.2 to 0.3.3
- reorganized api and dedicated to normal server build.
- runlevel slot 3 dedicated to derived per server specific plugins.